# cuda-course-2022

./: .gitmodules  LICENSE  README.md
A1/: CMakeLists.txt  README.md  julia_set.cu
A2/: .gitignore  CMakeLists.txt  README.md  ray_const.cu  ray_noconst.cu.b  ray_noconst.cu.backup  实现方案.md
A3/: CMakeLists.txt  README.md  vectorAdd_no_streams.cu  vectorAdd_three_streams.cu  vectorAdd_two_streams.cu  方案与结果分析.md
A3/share/: vectorAdd.cu
A4/: CMakeLists.txt  README.md
A4/include/: AABB.cuh  Vector3f.cuh  aabb.cuh  bvh.cuh  bvh_node.cuh  morton_code.cuh  triangle.h  vector3f.cuh
A4/src/: bvh.cu  main.cpp
A5/: CMakeLists.txt  README.md
A5-compare/: CMakeLists.txt
A5-compare/inc/: kernel.h  licence.h  timer.h
A5-compare/src/: cmesh.cpp  cmesh.h  cmodel.cpp  collid.cpp  kernel.cu  obj-viewer.cpp  tmbvh.cpp  tmbvh.hpp
A5/include/: aabb.cuh  aabb.h  bvh.cuh  bvh.h  bvh_node.cuh  bvh_node.h  common.h  morton_code.cuh  obj-viewer.h  query.h  triangle.h  vector3f.h
A5/src/: bvh.cu  heatTransfer3D.cu  main.cpp  obj-viewer.cpp
